batch inserts and tests
